[Fix] char overflow

--- a/public/stylesheets/syllabus.css
+++ b/public/stylesheets/syllabus.css
@@ -67,11 +67,11 @@ p + h2 {
     text-align: right;
     font-weight: bold;
     padding: 10px;
-    width: 25%;
+    width: 20%;
 }
 
 #basic table td {
     text-align: left;
     padding: 10px;
-    width: 25%;    
+    width: 30%;
 }
